--- a/css/estilo.css
+++ b/css/estilo.css
@@ -29,7 +29,7 @@
  * de un circulo
  */
 .Icon span{
-      background: #880000;
+      background: #FFFF00;
       padding: 20px;
       border-radius: 120px;
 }
