--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,7 +18,7 @@
 	margin: 50px auto;
 	background-color: #F3EDED;
         border: 1px solid #ECE8E8;
-	height: 450px;
+	height: 400px;
 	border-radius:8px;
 	padding: 0px 9px 0px 9px;
 }
@@ -29,7 +29,7 @@
  * de un circulo
  */
 .Icon span{
-      background: #FFFF00;
+      background: #7a7575;
       padding: 20px;
       border-radius: 120px;
 }
